--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ metrics-util = "0"
 metrics-exporter-prometheus = "0"
 env_logger = "0.9"
 log = "0.4"
-reqwest = { version = "0.11",features = ["brotli","json"] }
+reqwest = { version = "0.11", features = ["brotli", "json", "rustls-tls"], default-features = false }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
