--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,13 @@ edition = "2021"
 [dependencies]
 metrics = "0"
 metrics-util = "0"
-metrics-exporter-prometheus = "0"
-env_logger = "0.9"
+metrics-exporter-prometheus = { version = "0", default-features = false }
+env_logger = "0.10"
 log = "0.4"
 reqwest = { version = "0.11", features = ["brotli", "json", "rustls-tls"], default-features = false }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = { version = "0.4", features = ["serde"] }
+axum = "0.6"
+futures = "0.3"
