--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -2,7 +2,7 @@ name: update-flake-lock
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: '20 4 * * *'
 
 jobs:
   lockfile:
@@ -16,6 +16,7 @@ jobs:
         uses: DeterminateSystems/update-flake-lock@v19
         with:
           pr-title: "Update flake.lock"
+          pr-assignees: fpletz
           pr-labels: |
             dependencies
             automated
