workflows: add PAT for flake updates

--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -15,6 +15,7 @@ jobs:
       - name: Update flake.lock
         uses: DeterminateSystems/update-flake-lock@v19
         with:
+          token: ${{ secrets.GH_TOKEN_FOR_UPDATES }}
           pr-title: "Update flake.lock"
           pr-assignees: fpletz
           pr-labels: |
