--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ metrics-util = "0.16"
 metrics-exporter-prometheus = { version = "0.13", default-features = false }
 env_logger = "0.11"
 log = "0.4"
-reqwest = { version = "0.11", features = ["brotli", "json", "rustls-tls"], default-features = false }
+reqwest = { version = "0.11", features = ["brotli", "json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
